[package]
name = "game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.12.0", features = ["dynamic_linking"] }
bevy_rapier2d = "0.23.0"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

